tests/ui/imports/nested-import-root-symbol-150103.stderr
error[E0432]: unresolved import `Iuse`
  --> $DIR/nested-import-root-symbol-150103.rs:6:9
   |
LL |     use Iuse::{ ::Fish };
   |         ^^^^ use of unresolved module or unlinked crate `Iuse`
   |
help: you might be missing a crate named `Iuse`, add it to your project and import it in your code
   |
LL + extern crate Iuse;
   |

error[E0432]: unresolved import `A::Fish`
  --> $DIR/nested-import-root-symbol-150103.rs:10:13
   |
LL |     use A::{::Fish};
   |             ^ can only be used in path start position

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
